# BSEN

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
bsen/: __init__.py  cli.py
bsen/core/: models.py  plugin.py
bsen/remote/: remote_audit.py
bsen/reporting/: report_generator.py
bsen/risk_engine/: analyst.py  engine.py
bsen/scanners/common/: network_scanner.py  process_scanner.py  system_scanner.py
bsen/scanners/linux/: persistence_scanner_linux.py  security_scanner_linux.py
bsen/scanners/windows/: autoruns_scanner_win.py  security_scanner_win.py
bsen/utils/: shell.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  PLUGIN_DEVELOPMENT.md
scripts/: install.ps1  install.sh
tests/: test_models.py  test_plugin_discovery.py  test_risk_engine.py
